# skelett

./: Cargo.toml  LICENSE
src/: main.rs
src/logging/: mod.rs
src/parser/: args.rs  functional.rs  mod.rs  variables.rs
src/parser/sections/: file.rs  mod.rs  project.rs  skelett_template.rs  types.rs  variable.rs
templates/: python.toml  variables.toml
