[package]
name = "skelett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
rhai = "1.16.3"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"
regex = "1.10.2"
derivative = "2.2.0"
indexmap = { version = "2.1.0", features = ["serde"]}
